@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 25, 2009</p>
+      <p>Last Updated: March 28, 2009</p>
     </td>
   </tr>
 </table>
@@ -1363,7 +1363,9 @@ nuttx-0.4.4 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  (submitted by JPelletier).  The is the same fix that was needed for the
 	  eZ80 and fixed in 0.4.2.
 	* netutils: Added logic to support a simple wget() function
-	* examples/wget: Added a test for wget()
+	* examples/wget: Added a test for wget() (Not yet tested because of
+	  some current networking limitations).
+	* lib/strncasecmp: Fix cut'n'paste error in function name.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
